--- a/next-checkout/package.json
+++ b/next-checkout/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "next": "10.1.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "axios": "^1.6.8",
+    "next": "^14.1.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.3",
+    "@types/node": "20.11.30",
+    "@types/react": "^18.2.0",
     "typescript": "^4.2.3"
   }
 }
